tests/integration/snapshots/integration__conformance__n_number_1ee2.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1eE2]
stderr ---
error: expected +/- or digit after exponent indicator, found `E`
 --> stdin:1:4
  |
1 | [1eE2]
  |  --^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
